@@ -149,6 +149,7 @@ Chronological list of authors
   - Marcello Sega
   - Edis Jakupovic
   - Nicholas Craven
+  - Mieczyslaw Torchala
 
 External code
 -------------
